# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: CompilerWarnings.cmake  Sanitizer.cmake  Settings.cmake  SourcesAndHeaders.cmake  StartUp.cmake  Utils.cmake
cmake/internal/: AnsiColor.cmake  Ccache.cmake  ClangFormat.cmake  ClangTidy.cmake  Doxygen.cmake  LTO.cmake  LogLevel.cmake  Sanitizer.cmake  Utils.cmake  VARS.cmake
scripts/: clang_tidy.py  clang_tidy_extra.py
source/: main.cpp  tmp.cpp
test/: CMakeLists.txt
test/source/: tmp_test.cpp
